# CMakeNinjaExample

./: .gitignore  README.md
source/app/: CMakeLists.txt
source/app/src/: main.cpp
source/dll/: CMakeLists.txt
source/dll/include/: MyClass.h
source/dll/src/: MyClass.cpp
